framec_tests/language_specific/python/v3_facade_smoke/negative/transition_unquoted_state.frm
@target python

system S {
    machine:
        $A {
            e() {
                __frame_transition(B)
            }
        }
}

